// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchField [common] example testing should match snapshot(s) for 8.props 1`] = `
<div
  className="lucid-SearchField"
>
  <TextField
    debounceLevel={500}
    isDisabled={false}
    isMultiLine={false}
    lazyLevel={1000}
    onBlur={[Function]}
    onChange={[Function]}
    onChangeDebounced={[Function]}
    onKeyDown={[Function]}
    onSubmit={[Function]}
    rows={5}
    style={null}
    value="foo"
  />
  <div
    className="lucid-SearchField-Icon-container"
  >
    <SearchIcon
      aspectRatio="xMidYMid meet"
      className="lucid-SearchField-Icon lucid-SearchField-Icon-active"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={12}
      viewBox="0 0 16 16"
    />
  </div>
</div>
`;

exports[`SearchField [common] example testing should match snapshot(s) for 8.props 2`] = `
<div
  className="lucid-SearchField"
>
  <TextField
    debounceLevel={500}
    isDisabled={false}
    isMultiLine={false}
    lazyLevel={1000}
    onBlur={[Function]}
    onChange={[Function]}
    onChangeDebounced={[Function]}
    onKeyDown={[Function]}
    onSubmit={[Function]}
    placeholder="bar"
    rows={5}
    style={null}
    value=""
  />
  <div
    className="lucid-SearchField-Icon-container"
  >
    <SearchIcon
      aspectRatio="xMidYMid meet"
      className="lucid-SearchField-Icon"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={12}
      viewBox="0 0 16 16"
    />
  </div>
</div>
`;

exports[`SearchField [common] example testing should match snapshot(s) for 8.props 3`] = `
<div
  className="lucid-SearchField"
>
  <TextField
    debounceLevel={500}
    isDisabled={true}
    isMultiLine={false}
    lazyLevel={1000}
    onBlur={[Function]}
    onChange={[Function]}
    onChangeDebounced={[Function]}
    onKeyDown={[Function]}
    onSubmit={[Function]}
    rows={5}
    style={null}
    value=""
  />
  <div
    className="lucid-SearchField-Icon-container"
  >
    <SearchIcon
      aspectRatio="xMidYMid meet"
      className="lucid-SearchField-Icon"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={12}
      viewBox="0 0 16 16"
    />
  </div>
</div>
`;

exports[`SearchField [common] example testing should match snapshot(s) for 8.props 4`] = `
<div
  className="lucid-SearchField"
>
  <TextField
    debounceLevel={500}
    isDisabled={false}
    isMultiLine={false}
    lazyLevel={1000}
    onBlur={[Function]}
    onChange={[Function]}
    onChangeDebounced={[Function]}
    onKeyDown={[Function]}
    onSubmit={[Function]}
    rows={5}
    style={null}
    value=""
  />
  <div
    className="lucid-SearchField-Icon-container"
  >
    <SearchIcon
      aspectRatio="xMidYMid meet"
      className="lucid-SearchField-Icon"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={12}
      viewBox="0 0 16 16"
    />
  </div>
</div>
`;

exports[`SearchField [common] example testing should match snapshot(s) for 8.props 5`] = `
<div
  className="lucid-SearchField"
>
  <TextField
    debounceLevel={500}
    isDisabled={false}
    isMultiLine={false}
    lazyLevel={1000}
    onBlur={[Function]}
    onChange={[Function]}
    onChangeDebounced={[Function]}
    onKeyDown={[Function]}
    onSubmit={[Function]}
    rows={5}
    style={null}
    value=""
  />
  <div
    className="lucid-SearchField-Icon-container"
  >
    <LoadingIcon
      aspectRatio="xMidYMid meet"
      className="lucid-SearchField-Icon"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
  </div>
</div>
`;

exports[`SearchField [common] example testing should match snapshot(s) for 8.props 6`] = `
<div
  className="lucid-SearchField"
>
  <TextField
    debounceLevel={500}
    isDisabled={false}
    isMultiLine={false}
    lazyLevel={1000}
    onBlur={[Function]}
    onChange={[Function]}
    onChangeDebounced={[Function]}
    onKeyDown={[Function]}
    onSubmit={[Function]}
    rows={5}
    style={null}
    value="foo"
  />
  <div
    className="lucid-SearchField-Icon-container"
  >
    <LoadingIcon
      aspectRatio="xMidYMid meet"
      className="lucid-SearchField-Icon lucid-SearchField-Icon-active"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
  </div>
</div>
`;

exports[`SearchField [common] example testing should match snapshot(s) for 8.props 7`] = `
<div
  className="lucid-SearchField"
>
  <TextField
    debounceLevel={500}
    isDisabled={false}
    isMultiLine={false}
    lazyLevel={1000}
    onBlur={[Function]}
    onChange={[Function]}
    onChangeDebounced={[Function]}
    onKeyDown={[Function]}
    onSubmit={[Function]}
    rows={5}
    style={null}
    value="bar"
  />
  <div
    className="lucid-SearchField-Icon-container"
  >
    <SearchIcon
      aspectRatio="xMidYMid meet"
      className="lucid-SearchField-Icon lucid-SearchField-Icon-active"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={12}
      viewBox="0 0 16 16"
    />
  </div>
</div>
`;

exports[`SearchField [common] example testing should match snapshot(s) for 9.debounced 1`] = `
<div
  className="lucid-SearchField"
  style={
    Object {
      "marginBottom": "10px",
    }
  }
>
  <TextField
    debounceLevel={500}
    isDisabled={false}
    isMultiLine={false}
    lazyLevel={1000}
    onBlur={[Function]}
    onChange={[Function]}
    onChangeDebounced={[Function]}
    onKeyDown={[Function]}
    onSubmit={[Function]}
    rows={5}
    style={null}
    value="foo"
  />
  <div
    className="lucid-SearchField-Icon-container"
  >
    <SearchIcon
      aspectRatio="xMidYMid meet"
      className="lucid-SearchField-Icon lucid-SearchField-Icon-active"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={12}
      viewBox="0 0 16 16"
    />
  </div>
</div>
`;
